# rust-axum-intro

./: Cargo.toml  README.md  justfile  rustfmt.toml
src/: error.rs  log.rs  main.rs  model.rs
src/web/: login.rs  middleware.rs  mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs  tickets.rs
tests/: quck_dev.rs  quick_dev.rs
